--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background: #224941 url('./img/bg.jpg') no-repeat center center/cover;
+  background: #224941 url('./img/bg1.jpg') no-repeat center center/cover;
   color: #fff;
   font-family: 'Montserrat', sans-serif;
   min-height: 100vh;
@@ -39,14 +39,13 @@ body {
 }
 
 .gradient-circle {
-  background: conic-gradient(
-    #55b7a4 0%,
-    #4ca493 40%,
-    #fff 40%,
-    #fff 60%,
-    #336d62 60%,
-    #2a5b52 100%
-  );
+  background: conic-gradient(#55b7a4 0%,
+      #55b7a4 0%,
+      #4ca493 20%,
+      #fff 20%,
+      #fff 60%,
+      #336d62 55%,
+      #2a5b52 100%);
   height: 320px;
   width: 320px;
   z-index: -2;
@@ -70,7 +69,7 @@ body {
   left: 140px;
   width: 20px;
   height: 190px;
-  animation: rotate 7.5s linear forwards infinite;
+  animation: rotate 19s linear forwards infinite;
   transform-origin: bottom center;
 }
 
@@ -85,7 +84,7 @@ body {
 }
 
 .container.grow {
-  animation: grow 3s linear forwards;
+  animation: grow 4s linear forwards;
 }
 
 @keyframes grow {
@@ -99,7 +98,7 @@ body {
 }
 
 .container.shrink {
-  animation: shrink 3s linear forwards;
+  animation: shrink 8s linear forwards;
 }
 
 @keyframes shrink {
