--- a/style.css
+++ b/style.css
@@ -16,6 +16,16 @@ body {
   margin: 0;
 }
 
+h1 {
+
+  font-size: 3em;
+}
+
+.info {
+
+  color: black;
+}
+
 .container {
   display: flex;
   align-items: center;
